--- a/my_set/main/templates/import_csv.html
+++ b/my_set/main/templates/import_csv.html
@@ -11,4 +11,7 @@
         <button type="submit" class="btn bg-success">Upload</button>
     </form>
 </div>
+<a href="/" class="btn btn-outline-secondary back-btn-sets">
+    <span class="material-symbols-outlined back-btn">undo</span>
+</a>
 {% endblock %}
