--- a/my_set/main/templates/main/one_set.html
+++ b/my_set/main/templates/main/one_set.html
@@ -1,11 +1,16 @@
-{% for project in projects %}
-    <div class="row project_">
-        <div class="row">
+{% extends 'main/layout.html' %}
 
+{% block title %} Set {{ set.name }} {% endblock %}
+
+{% block content %}
+<div class="one-set-container">
+    {% for project in projects %}
+        <div class="row project_">
+        
             <div class="box col-sm-2" style="padding-top: 20px;">Title:</div>
             <div class="box col-sm-10">
                 <div class="edit-project-button"><a href="{% url 'edit_project' project.id %}" class="btn btn-outline-secondary">Edit</a></div>
-                <div class="delete-project-button"><a href="{% url 'delete_project' project.id %}" class="btn btn-outline-danger ">Delete</a></div>
+                <div class="delete-project-button" style="left: 84%;"><a href="{% url 'delete_project' project.id %}" class="btn btn-outline-danger ">Delete</a></div>
                 <div class="title_" style="left: -125px; position: relative;">{{ project.title }}</div>
             </div>
             <div class="box col-sm-2">Industries:</div>
@@ -26,7 +31,14 @@
             </div>
             <div class="box col-sm-2">Url:</div>
             <div class="box col-sm-10 url_"><a href="" class="url_">{{ project.url }}</a></div>   
-        </div>
-    </div> 
-{% endfor %}
- 
+        </div> 
+    {% empty %}
+        <li>No projects in this set.</li>
+    {% endfor %}
+</div>
+
+<a href="/" class="btn btn-outline-secondary back-btn-sets">
+    <span class="material-symbols-outlined back-btn">undo</span>
+</a>
+
+{% endblock %}
