--- a/my_set/main/templates/main/login.html
+++ b/my_set/main/templates/main/login.html
@@ -38,8 +38,8 @@
 		{% endfor %} 
 
 		<div class="mt-4">
-			<div class="d-flex justify-content-center links">
-				Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+			<div class="d-flex justify-content-center links" style="color: white;">
+				Don't have an account? <a href="{% url 'register' %}" style="margin-left: 8px; color: rgb(202, 255, 211);">Sign Up</a>
 			</div>
 	
 		</div>
