--- a/my_set/main/templates/main/login.html
+++ b/my_set/main/templates/main/login.html
@@ -41,7 +41,7 @@
 			<div class="d-flex justify-content-center links" style="color: white;">
 				Don't have an account? <a href="{% url 'register' %}" style="margin-left: 8px; color: rgb(202, 255, 211);">Sign Up</a>
 			</div>
-	
+			<div class="d-flex justify-content-center links" style="color: white;">or  <a href="{% url 'change_password_message' %}" style="margin-left: 15px; color: rgb(202, 255, 211);">Change your password</a></div>
 		</div>
 	</div>
 </div>
