--- a/my_set/main/templates/change_password_message.html
+++ b/my_set/main/templates/change_password_message.html
@@ -3,26 +3,23 @@
 {% block title %} Reset Password {% endblock %}
 
 {% block content %}
-<div style="position: absolute; width: 100%; height: 100%;">
-    <div class="row" style="position: relative; padding: 80px; width: 100%; top: 15%;">
-        <div class="col-sm-3"></div>
-        <div  class="col-sm-3" style="padding: 80px; background-color: rgb(223, 223, 223);">
-            <h1 style="width: 288px;">Enter your email</h1>
-            <p style="margin-top: 50px;">Please enter the email address associated with your account. We'll send you a link to reset your password.</p>
-        </div>
-        <form method="post" action="{% url 'change_password_message' %}"  class="col-sm-3" style="position: relative; z-index: 1; background-color: rgb(194, 194, 194);">
+<div class="card text-center" style="width: 350px; position: absolute; top: 25%; left: 42%; background-color: #f8f8f8;">
+    <div class="card-header h5 text-white" style="background-color: #FF7400;">Password Reset</div>
+    <div class="card-body px-5">
+        <p class="card-text py-2">
+            Enter your email address and we'll send you an email with instructions to reset your password.
+        </p>
+        <form method="post" action="{% url 'change_password_message' %}">
             {% csrf_token %}
-            <div style="position: relative; top:18%; padding-left: 20px;">
-                <ol><h4 style="position: relative; left: -30px;">Instructions:</h4>
-                    <li>Enter your email address above.</li>
-                    <li>Check your email inbox for a message from us.</li>
-                    <li>Click on the link provided in the email to reset your password.</li>
-                </ol><br>
-                <label for="id_email">Email:</label>
-                <input type="email" id="id_email" name="email" required>
-                <button type="submit">Отправить</button>
+            <div class="form-outline my-3">
+                {{ form.email }}
             </div>
+            <button type="submit" class="btn btn-primary w-100" style="background-color: #FF7400; border-color: #ffb171;">Reset password</button>
         </form>
+        <div class="d-flex justify-content-between mt-4">
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'register' %}">Register</a>
+        </div>
     </div>
 </div>
 {% endblock %}
