--- a/my_set/main/templates/main/register.html
+++ b/my_set/main/templates/main/register.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 <div class="container h-100">
-	<div class="d-flex justify-content-center h-100" style="padding-top: 15vh;">
+	<div class="d-flex justify-content-center h-100" style="padding-top: 20vh;">
 		<div class="user_card">
 			<div class="d-flex justify-content-center">
-				<h3 id="form-title">REGISTER ACCOUNT</h3>
+				<h3 id="form-title">Register account</h3>
 			</div>
 			<div class="d-flex justify-content-center form_container">
 
@@ -61,7 +61,7 @@
 			</div>
 			<div class="mt-4">
 				<div class="d-flex justify-content-center links">
-					<div style="color: white;">Already have an account?</div> <a href="{% url 'login' %}" style=" color: rgb(202, 255, 211); margin-left: 8px;" class="ml-2">Login</a>
+					<div style="color: white;">Already have an account?</div> <a href="{% url 'login' %}" style=" color: rgb(66, 66, 66); margin-left: 8px;" class="ml-2">Login</a>
 				</div>
 			</div>
 		</div>
