--- a/my_set/main/templates/password_reset_confirm.html
+++ b/my_set/main/templates/password_reset_confirm.html
@@ -3,7 +3,7 @@
 {% block title %} Reset Password {% endblock %}
 
 {% block content %}
-<div style="position: absolute; width: 100%; height: 100%;">
+<!-- <div style="position: absolute; width: 100%; height: 100%;">
     <div class="row" style="position: relative; padding: 80px; width: 100%; top: 15%;">
         <div class="col-sm-3"></div>
         <div  class="col-sm-3" style="padding: 80px; background-color: rgb(223, 223, 223);">
@@ -18,5 +18,23 @@
             </div>
         </form>
     </div>
+</div> -->
+<div class="card text-center" style="width: 350px; height: 420px; position: absolute; top: 25%; left: 42%; background-color: #f8f8f8;">
+    <div class="card-header h5 text-white" style="background-color: #FF7400;">Password Reset</div>
+    <div class="card-body px-5">
+        <p class="card-text py-2">
+            To change your password, please enter a new password and confirm it by entering it again.
+        </p>
+        <form method="post" action="{% url 'change_password_message' %}">
+            {% csrf_token %}
+            <div class="form-outline my-3">
+                <label style="position: relative; left: -40px; margin-bottom: 5px;">New password :</label>
+                {{ form.new_password1 }}
+                <br><br>
+                <label style="position: relative; left: -10px; margin-bottom: 5px;">Confirm new password :</label>
+                {{ form.new_password2 }}
+            </div>
+            <button type="submit" class="btn btn-primary w-100" style="position: relative; top: 20px; background-color: #FF7400; border-color: #ffb171;">Reset password</button>
+        </form>
 </div>
-{% endblock %}ц
+{% endblock %}
