--- a/my_set/main/templates/add_project.html
+++ b/my_set/main/templates/add_project.html
@@ -27,7 +27,7 @@
                         </div>
                         {{form.url}}
                     </div>
-                    <div class=" mb-4 block_" style="">
+                    <div class=" mb-4 block_">
                         <div class="" style="position: relative; ">
                             <span class="input-group-text material-symbols-outlined" style="float: left; margin-right: 10px;">Widgets</span>
                             <h5 style="font-size: 25px; width: 100%;">Enter your sets:</h5><br>
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="height: 400px; margin-bottom: 25px; margin-top: 22px; padding-top: 22px; border: 2px solid rgb(197, 197, 197);">
+                <div class="row" style="display: flex; min-height: 400px; margin-bottom: 25px; margin-top: 22px; padding-top: 22px; border: 2px solid rgb(197, 197, 197);">
                     <div class="mb-2 block_">
                         <div class="">
                             <span class="input-group-text material-symbols-outlined" style="float: left; margin-right: 10px;">Settings</span>
@@ -73,7 +73,7 @@
                             {% endif %}
                             {% endfor %}
                         </div> <br>
-                        <div>
+                        <div style="padding-bottom: 20px;">
                             {{ form.new_industries }}
                         </div>
                     </div>
