--- a/my_set/main/templates/password_reset_confirm.html
+++ b/my_set/main/templates/password_reset_confirm.html
@@ -9,16 +9,26 @@
         <p class="card-text py-2">
             To change your password, please enter a new password and confirm it by entering it again.
         </p>
-        <form method="post" action="{% url 'change_password_message' %}">
-            {% csrf_token %}
-            <div class="form-outline my-3">
-                <label style="position: relative; left: -40px; margin-bottom: 5px;">New password :</label>
-                {{ form.new_password1 }}
-                <br><br>
-                <label style="position: relative; left: -10px; margin-bottom: 5px;">Confirm new password :</label>
-                {{ form.new_password2 }}
-            </div>
-            <button type="submit" class="btn btn-primary w-100" style="position: relative; top: 20px; background-color: #FF7400; border-color: #ffb171;">Reset password</button>
-        </form>
+        {% if uidb64 and token %}
+            <form method="post" action="{% url 'password_reset_confirm' uidb64=uidb64 token=token %}">
+                {% csrf_token %}
+                <div class="form-outline my-3">
+                    <label style="position: relative; left: -40px; margin-bottom: 5px;">New password :</label>
+                    {{ form.new_password1 }}
+                    {% if form.new_password1.errors %}
+                        <div class="error">{{ form.new_password1.errors }}</div>
+                    {% endif %}
+                    <br><br>
+                    <label style="position: relative; left: -10px; margin-bottom: 5px;">Confirm new password :</label>
+                    {{ form.new_password2 }}
+                    {% if form.new_password2.errors %}
+                        <div class="error">{{ form.new_password2.errors }}</div>
+                    {% endif %}
+                </div>
+                <button type="submit" class="btn btn-primary w-100" style="position: relative; top: 20px; background-color: #FF7400; border-color: #ffb171;">Reset password</button>
+            </form>
+        {% else %}
+            <p>Error: Missing UID or token.</p>
+        {% endif %}
 </div>
 {% endblock %}
