--- a/my_set/main/templates/add_set.html
+++ b/my_set/main/templates/add_set.html
@@ -3,7 +3,7 @@
 {% block title %}Add Set{% endblock title %}
 
 {% block content %}
-<div class="container project-cont" style="top: 20%; left: 20%;">
+<div class="container project-cont" style="position: relative; top: 200px; left: 10%;">
     <div class="row">
         <div class="col-md-12">
             <h1 style="font-size: 70px; margin-bottom: 50px;">Add Set </h1>
@@ -19,7 +19,7 @@
                     <div class="input-group-append">
                         <span class="material-symbols-outlined">lock</span>
                     </div>
-                    <h5>Private_</h5> 
+                    <h5 style="margin-right: 10px;">Private</h5> 
                     {{form.is_private}}
                 </div>
                 <button type="submit" class="btn btn-primary btn-sm" style="left: 3%; top: 10px; position: relative;" value=""> Save</button>
