--- a/my_set/main/templates/edit_set.html
+++ b/my_set/main/templates/edit_set.html
@@ -3,10 +3,11 @@
 {% block title %} Edit {% endblock %}
 
 {% block content %}
-<div class="container project-cont" style="top: 20%; left: 20%;">
+<div class="container project-cont" style="position: relative; top: 200px; left: 10%;">
     <div class="row">
         <div class="col-md-12">
             <h1  style="font-size: 70px; margin-bottom: 50px;">Edit Set - {{ set.name }}</h1>
+            
             <form action="" method='POST' style="left: 3%; position: relative;">
                 {% csrf_token %}
                 <div class="input-group mb-3" style="left: 3%;">
@@ -22,7 +23,12 @@
                     <h5>Private_</h5> 
                     {{form.is_private}}
                 </div>
-                <button type="submit" class="btn btn-primary btn-sm" style="left: 3%; top: 10px; position: relative;" value=""> Save</button>
+
+                <button type="submit" class="btn btn-primary btn-sm" style="width: 90px; left: 3%; top: 10px; position: relative;" value=""> Save</button>
+            </form>
+            <form action="{% url 'delete-set' set.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger" style="position: relative; top: 30px; left: 6%;">Delete</button>
             </form>
         </div>
     </div>
