--- a/my_set/main/templates/edit_project.html
+++ b/my_set/main/templates/edit_project.html
@@ -79,7 +79,7 @@
                     <div class="input-group-append">
                         <span class="material-symbols-outlined">lock</span>
                     </div>
-                    <h5>Private_</h5> 
+                    <h5 style="margin-right: 10px;">Private</h5> 
                     {{form.is_private}}
                 </div>
                 <button type="submit" class="btn btn-primary btn-sm" value=""> Save</button>
