--- a/my_set/main/templates/edit_set.html
+++ b/my_set/main/templates/edit_set.html
@@ -19,7 +19,7 @@
                     <div class="input-group-append">
                         <span class="material-symbols-outlined">lock</span>
                     </div>
-                    <h5>Private_</h5> 
+                    <h5 style="margin-right: 10px;">Private</h5> 
                     {{form.is_private}}
                 </div>
                 <button type="submit" class="btn btn-primary btn-sm" style="left: 3%; top: 10px; position: relative;" value=""> Save</button>
