--- a/my_set/main/templates/main/index.html
+++ b/my_set/main/templates/main/index.html
@@ -47,6 +47,7 @@
                     <button type="button" class="btn btn-outline-dark custom-btn butt-chose" data-value="Public">Public</button>
                     <button type="button" class="btn btn-outline-dark custom-btn butt-chose" data-value="Private">Private</button>
                     <button type="button" class="btn btn-outline-dark custom-btn butt-chose" data-value="MySets">My Sets</button>
+                    <button type="button" class="btn btn-outline-dark custom-btn butt-chose" data-value="Other">Other Projects</button>
                 </div>
                 <div class="btn-group-toggle-2">
                     <a href="{% url 'add_project' %}" type="button" class="btn btn-outline-primary" data-value="Add project">Add project</a>
@@ -56,10 +57,10 @@
                 <div>
                     <input id="search" type="text" class="filter-of-container-main" placeholder="Search...">
                     <button type="button" class="btn btn-outline-secondary search_" data-value="Search">Search</button>
-                </div>
+                </div>  
             </div>
                 
-            <div id="projects">
+            <div id="projects" style="overflow: hidden; overflow-y: auto;">
             </div>
         </div>
     </div>
