--- a/my_set/main/templates/main/layout.html
+++ b/my_set/main/templates/main/layout.html
@@ -22,8 +22,8 @@
                 {% if not request.user.is_authenticated %}
                     <a href="">Hello</a>
                 {% else %}
-                    <a style="margin-right: 130px;">Hello, {{request.user}}!</a>    
-                    <a href="{% url 'logout' %}">Logout <i class="fas fa-door-open"></i></a>
+                    <a style="margin-right: 130px;">{{request.user}}</a>    
+                    <a href="{% url 'profile' %}"><span style="position: relative; left: -85px; top: 18px; font-size: 30px;" class="material-symbols-outlined">account_circle</span></a>
                 {% endif %}
             </div>
         </div>
